# satelit

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TLexer.g4  TParser.g4  cmake_install.cmake  conanfile.txt
cmake/: ExternalAntlr4Cpp.cmake
grammar/: TLexer.g4  TParser.g4
inc/: compile_visitor.h  compiler.h  garbage  interpreter.h  iprogramm.h  runtime_visitor.h  st_objects.h  stack_machine.h  stfunction.h
inc/data_types/: st_type.h  variable_map.h
inc/exceptions/: compile_errors.h  exceptions.h  runtime_errors.h
src/: compile_visitor.cpp  compiler.cpp  interpreter.cpp  runtime_visitor.cpp  st_objects.cpp  stack_machine.cpp  stfunction.cpp
src/data_types/: variable_map.cpp
tests/: CMakeLists.txt  Makefile  arifmetics_test.cpp  cmake_install.cmake  compiler_test.cpp  functions_test.cpp  prog_test.cpp
